export interface Rotatable {
  RPM: number;
  Stress: number;
}
