export interface Tickable {
  GlobalTick(): void;
}
