@startuml main
title クラス図

package Main {
  class BlockEntity
  BlockEntity --|> Tickable
  interface Tickable
  interface Rotatable

  class HandCrank
  HandCrank --> BlockEntity 
  HandCrank --|> Rotatable

  class SmallCogWheel
  SmallCogWheel --> BlockEntity 
  SmallCogWheel --|> Rotatable

  class BlockEntityRegistry

  class Main
}

@enduml